nginx-ingress/testing/blogging-application/blog-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-app
  labels:
    app: blogging-application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blogging-application
  template:
    metadata:
      labels:
        app: blogging-application
    spec:
      containers:
      - name: nginx-container
        image: nginx:latest
