nginx-ingress/testing/blogging-application/blog-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blogging-ingress
  labels:
    app: blogging-application
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /testing
        pathType: Prefix
        backend:
          service:
            name: blogging-svc
            port:
              number: 80
